2009-03-03  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-compose-macro): Do not
	hard code Debian, use `tinydebian-bts-generic-email-control'.
	(tinydebian-bts-generic-email-control): New.
	(tinydebian-bts-generic-email-control): New.
	(tinydebian-emacs-bts-email-control): New.

2009-03-02  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyeat.el (tinyeat-install-default-bindings): Change
	M-DEL to M-backspace.

2009-02-27  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el
	(tinydebian-bug-gnu-emacs-bts-gnus-summary-line-p): New.
	(tinydebian-bug-gnu-emacs-bts-gnus-article-p): New.
	(tinydebian-bug-gnu-emacs-bts-p): Rewrite.
	(tinydebian-bug-gnu-emacs-bts-buffer-p): New.
	(tinydebian-bug-gnu-emacs-bts-gnus-summary-p): New.
	(tinydebian-emacs-bts-bug-url-compose): New.
	(tinydebian-bug-gnu-emacs-bts-re-search-email): Improve
	search regexp.
	(tinydebian-:version-time): New.
	(tinydebian-bts-mail-ctrl-retitle): Add missing `format'
	command to insert new title.

2009-02-26  Jari Aalto  <jari.aalto@cante.net>

        -- Mass update: change all `char=' commands to `char-equal'; Emacs
           22.x fix.

	* tiny/tinydebian.el (tinydebian-bug-gnu-emacs-bts-p):
	Check if `email' was set. This fixes bug where every mail
	was considered Emacs BTS.

2009-02-20  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinypath.el: Correct typos in documentation. Remove
	ancient cust-stub.el information.

	* other/folding.el: Make XEmacs CVS and Savannah git revisions at
	header more clear. Unify html-mode folds as in other modes:
	change [[[ ]]] to {{{ }}}. Move `folding-version-time' to the
	beginning of file.

	* tiny/tinybuffer.el: Adjust comments. Remove extra newlines.

2009-02-19  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinygnus.el (tinygnus-summary-compose-current-mail-as-template):
	Reformat indentation.

	* tiny/tinydebian.el (tinydebian-bug-gnu-savannah-site-support-p):
	Rename.
	(tinydebian-bug-generic-string-p): New.